--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -15,10 +15,10 @@
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
-		      <a class="navbar-brand" href="/">Cinema</a>
+		      <a class="navbar-brand" href="/" data-toggle="tooltip" data-placement="bottom" title="Back to home page">Admin - cinema</a>
 		    </div>
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="/">Home</a></li>
+		      <li class="active"><a href="/admin">Dashboard</a></li>
 		      <li><a href="#">Page 1</a></li>
 		      <li><a href="#">Page 2</a></li> 
 		      <li><a href="#">Page 3</a></li> 
