--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -21,7 +21,7 @@
 		      <li class="active"><a href="/admin">Dashboard</a></li>
 		      <li><a href="#">Page 1</a></li>
 		      <li><a href="#">Page 2</a></li> 
-		      <li><a href="#">Page 3</a></li> 
+		      <li><a href="/admin/logout">Logout</a></li> 
 		    </ul>
 		  </div>
 		</nav>
