scheme methods added

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -5,7 +5,7 @@
 			<strong>Error!</strong> {{ error }}.
 		</div>
 	{{/if}}
-	<form role="form" action="/admin/login" method="POST">
+	<form role="form" action="/register" method="POST">
 	  <div class="form-group col-sm-12">
 	    <label for="email">Email address:</label>
 	    <input type="email" name="email" class="form-control" id="email">
