Commit before big changes to controller

--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -18,17 +18,14 @@
 		      <a class="navbar-brand" href="/" data-toggle="tooltip" data-placement="bottom" title="Back to home page">Admin - cinema</a>
 		    </div>
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="/admin">Dashboard</a></li>
-		      <li><a href="#">Page 1</a></li>
-		      <li><a href="#">Page 2</a></li> 
+		      <li><a href="/admin">Dashboard</a></li>
+		      <li><a href="/admin/add-data">Add data</a></li>
 		      <li><a href="/admin/logout">Logout</a></li> 
 		    </ul>
 		  </div>
 		</nav>
 	</header>
-	<div class="container">
 		{{{ body }}}
-	</div>
 	<footer class="row">
 		<div class="col-sm-12">
 			<p>
