Changed view engine to twig

--- a/views/admin-layout.twig
+++ b/views/admin-layout.twig
@@ -24,7 +24,9 @@
 		  </div>
 		</nav>
 	</header>
-		{{{ body }}}
+		{% block content %}
+
+		{% endblock %}
 	<footer class="row">
 		<div class="col-sm-12">
 			<p>
