--- a/views/base-layout.twig
+++ b/views/base-layout.twig
@@ -27,7 +27,8 @@
 		</nav>
 	</header>
 	<div class="container">
-		{{{ body }}}
+		{% block content %}
+		{% endblock %}
 	</div>
 	<footer class="row">
 		<div class="col-sm-12">
