Added add-data and remove functionality to admin

--- a/views/admin-layout.twig
+++ b/views/admin-layout.twig
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" href="/styles/main.css">
 	<script src="/javascript/main.js"></script>
+	<script src="/javascript/admin.js"></script>
 	<title>{{ title }}</title>
 </head>
 <body>
