Disabled twig cache for development

--- a/views/admin-add-data.twig
+++ b/views/admin-add-data.twig
@@ -15,7 +15,7 @@
 			    </div>
 			{% endfor %}
 
-			<a id="add-new" href="/admin/add-data/{{ colName }}" class="btn">Add</a>
+			<a id="add-new" href="/admin/add-data/{{ colName }}" class="btn .btn-primary">Add</a>
 
 		</div>
 	</div>
