--- a/views/home.twig
+++ b/views/home.twig
@@ -10,7 +10,7 @@
 					<p>{{ post.text }}</p>
 				</div>
 			{% else %}
-			    No posts have been found.
+			    No posts yet...
 			{% endfor %}
 
 		</div>
