--- a/views/admin-hp.twig
+++ b/views/admin-hp.twig
@@ -1,6 +1,8 @@
 {% extends 'admin-layout.twig' %}
 
 {% block content %}
+
+<div class="container">
     
 	<div class="dropdown">
 	  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Edit articles
@@ -11,5 +13,7 @@
 	    {% endfor %}
 	  </ul>
 	</div>
+
+</div>
 
 {% endblock %}
