--- a/views/admin-login.twig
+++ b/views/admin-login.twig
@@ -12,8 +12,8 @@
 		{% endif %}
 		<form role="form" action="/admin/login" method="POST">
 		  <div class="form-group">
-		    <label for="email">Email address:</label>
-		    <input type="email" name="email" class="form-control" id="email">
+		    <label for="email">User name:</label>
+		    <input type="text" name="name" class="form-control" id="email">
 		  </div>
 		  <div class="form-group">
 		    <label for="pwd">Password:</label>
