--- a/views/admin-login.twig
+++ b/views/admin-login.twig
@@ -22,7 +22,7 @@
 		  <div class="checkbox">
 		    <label><input type="checkbox"> Remember me</label>
 		  </div>
-		  <button type="submit" class="btn btn-default">Submit</button>
+		  <button type="Sign in" class="btn btn-default">Submit</button>
 		</form>
 		<span class="">Back to <a href="/">Cinema</a></span>
 	</div>
