--- a/views/admin-edit-data.twig
+++ b/views/admin-edit-data.twig
@@ -5,25 +5,24 @@
 		<div class="row">
 			
 			<h2>{{ title }}</h2>
-			
-			{% for key, item in document %}
-				{% if structure[key] %}
-					<div class="row section">
-					    <div class="col-sm-2">
-					    	<h4>{{key}}</h4>
-					    </div>
-					    <div class="col-sm-10">
-						    {% if structure[key] == 'wysiwyg' %}
-								<div class="data summernote" name="{{key}}">{{ item }}</div>
-							{% elseif structure[key] == 'input' %}
-								<input class="data" type="text" name="{{key}}" value="{{ item }}">
-							{% elseif structure[key] == 'textarea' %}
-								<textarea name="{{key}}" class="data">{{ item }}</textarea>
-						    {% endif %}
-					    </div>
-					</div>
-				{% endif %}
+
+			{% for key, item in structure %}
+			<div class="row section">
+			    <div class="col-sm-2">
+			    	<h4>{{key}}</h4>
+			    </div>
+			    <div class="col-sm-10">
+				    {% if item == 'wysiwyg'%}
+						<div class="data summernote {{ key }}" name="{{ key }}">{{ document[key] }}</div>
+					{% elseif item == 'input' %}
+						<input class="data {{ key }}" type="text" name="{{ key }}" value="{{ document[key] }}">
+					{% elseif item == 'textarea' %}
+						<textarea name="{{ key }}" class="data {{ key }}">{{ document[key] }}</textarea>
+				    {% endif %}
+			    </div>
+			</div>
 			{% endfor %}
+
 			<a id="edit" role="button" href="/admin/edit-data/{{ colName }}/{{ document._id }}" class="btn btn-primary">Save edit</a>
 		</div>
 	</div>
