--- a/views/admin-layout.twig
+++ b/views/admin-layout.twig
@@ -5,7 +5,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+	<link rel="shortcut icon" href="images/favicon.ico" />
 	<link rel="stylesheet" href="/styles/main.css">
 	<script src="/javascript/main.js"></script>
 	<script src="/javascript/admin.js"></script>
@@ -26,7 +26,7 @@
 		    <ul class="nav navbar-nav">
 		      <li><a href="/admin">Dashboard</a></li>
 		      <li class="dropdown">
-				  <a data-toggle="dropdown">Edit content
+				  <a data-toggle="dropdown">Content
 				  <span class="caret"></span></a>
 				  <ul class="dropdown-menu">
 				    {% for col in cols %}
