--- a/views/home.twig
+++ b/views/home.twig
@@ -7,6 +7,7 @@
 			{% for post in posts %}
 			    <div class="item col-sm-12 well">
 				    <h3>{{ post.title }}</h3>
+				    <h4>{{ post.perex }}</h4>
 					<p>{{ post.text }}</p>
 				</div>
 			{% else %}
