--- a/src/frontend/styles/layout.less
+++ b/src/frontend/styles/layout.less
@@ -1,9 +1,25 @@
+html, body{
+	height: 100%;
+}
+
+.wraper{
+	min-height: 100%;
+	position: relative;
+}
+
+.content{
+	padding-bottom: 110px
+}
+
 footer{
-	margin-top: 50px;
+	margin: 0 !important;
 	height:90px;
-	padding: 30px;
+	padding: 30px 0px;
 	background-color: #f3f3f3;
 	border-top: 1px solid #ddd;
+	width:100%;
+	bottom:0px;
+	position: absolute;
 	p{
 		text-align: center;
 	}
