--- a/views/base-layout.twig
+++ b/views/base-layout.twig
@@ -11,6 +11,7 @@
 	<title>{{ title }}</title>
 </head>
 <body>
+<div class="wraper">
 	<header>
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
@@ -26,16 +27,17 @@
 		  </div>
 		</nav>
 	</header>
-	<div class="container">
+	<div class="container content">
 		{% block content %}
 		{% endblock %}
 	</div>
 	<footer class="row">
-		<div class="col-sm-12">
+		<div class="inner col-sm-12">
 			<p>
 				Copyright &copy; 2016
 			</p>
 		</div>
 	</footer>
+</div>
 </body>
 </html>
