--- a/views/home.twig
+++ b/views/home.twig
@@ -9,6 +9,8 @@
 				    <h3>{{ post.title }}</h3>
 				    <h4>{{ post.perex }}</h4>
 					<p>{{ post.text }}</p>
+
+					<a href="/post/{{ post.url }}">Read more</a>
 				</div>
 			{% else %}
 			    No posts yet.
