Added session controll midleware

--- a/views/admin-layout.twig
+++ b/views/admin-layout.twig
@@ -35,6 +35,7 @@
 				    {% endfor %}
 				  </ul>
 		      </li>
+		      <li><a href="/admin/change-password">Change password</a></li>
 		    </ul>
 		  </div>
 		  <div class="col-sm-2">
