--- a/views/show-data.twig
+++ b/views/show-data.twig
@@ -13,7 +13,7 @@
 				{% else %}
 
 					<h2>{{ title }}</h2>
-					<a href="/admin/add-data/{{ colName }}">Add new</a>
+					<a class="" href="/admin/add-data/{{ colName }}">Add new</a>
 
 					<table class="table">
 					    <thead>
