--- a/views/admin-change-password.twig
+++ b/views/admin-change-password.twig
@@ -23,7 +23,7 @@
 		    <label for="pwd">New password:</label>
 		    <input type="password" name="newPassRepeat" class="form-control data" id="pwd">
 		  </div>
-		  <button type="submit" class="btn btn-default">Change</button>
+		  <button type="submit" class="btn btn-primary">Change</button>
 		</form>
 	</div>
 </div>
