added improved validation

--- a/views/admin-login.twig
+++ b/views/admin-login.twig
@@ -7,7 +7,7 @@
 		<h2>Login - Admin</h2>
 		{% if error %}
 			<div class="alert alert-danger">
-				<strong>Error!</strong> {{ error }}.
+				<strong>Error!</strong> {{ error }}
 			</div>
 		{% endif %}
 		<form role="form" action="/admin/login" method="POST">
