Added image picker to admin + added helper function to query multiple collections + fixed some issues

--- a/src/frontend/styles/layout.less
+++ b/src/frontend/styles/layout.less
@@ -24,3 +24,25 @@ footer{
 		text-align: center;
 	}
 }
+
+// just some helper styles
+
+.capitalise{
+	text-transform: capitalize;
+}
+
+.align-right{
+	text-align: right
+}
+.ml-20 {
+	margin-left: 20px;
+}
+.mr-20 {
+	margin-right: 20px;
+}
+.mt-20 {
+	margin-top: 20px;
+}
+.mb-20 {
+	margin-bottom: 20px;
+}
