--- a/views/admin-layout.twig
+++ b/views/admin-layout.twig
@@ -59,6 +59,20 @@
 			</p>
 		</div>
 	</footer>
+
+	<div class="popup container-fluid">
+		<div class="row">
+			<div class="inner col-sm-8 col-sm-offset-2">
+				<div class="header col-sm-12">
+					<a href="#" class="close">x</a>
+				</div>
+				<div class="content">
+					
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
 </body>
 </html>
