--- a/src/frontend/styles/styles.less
+++ b/src/frontend/styles/styles.less
@@ -47,3 +47,64 @@
 .paginationContainer {
 	text-align: center;
 }
+
+.popup{
+	position: fixed;
+	left: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 100%;
+	display: none;
+
+	.inner{
+		background-color: white;
+		height:500px;
+		margin-top: 50px;
+		padding: 0;
+		.header{
+			padding: 10px 15px;
+		}
+
+		.content{
+			overflow-x: scroll;
+			width: 100%;
+			height: 100%;
+			position: relative;
+		}
+	} 
+}
+
+.admin-image-gallery{
+	.image{
+		width:200px;
+		height:200px;
+		float: left;
+		overflow: hidden;
+		text-align: center;
+		background-color: #efefef;
+		position: relative;
+		display: block;
+		cursor:pointer;
+		img{
+			width:200px;
+		}
+
+		.name{
+			position: absolute;
+		    left: 0;
+		    transition: .3s;
+		    width: 100%;
+		    bottom: -25px;
+		    color: white;
+		    padding: 5px;
+		    font-size: 11px;
+		    background-color: rgba(0, 0, 0 , .5);
+		}
+		&:hover{
+			.name{
+				bottom:0px;
+			}
+		}
+	}
+}
