--- a/views/admin-edit-data.twig
+++ b/views/admin-edit-data.twig
@@ -18,6 +18,15 @@
 						<input class="data {{ key }}" type="text" name="{{ key }}" value="{{ document[key] }}">
 					{% elseif item == 'textarea' %}
 						<textarea name="{{ key }}" class="data {{ key }}">{{ document[key] }}</textarea>
+					{% elseif item == 'image' %}
+						<div class="row">
+							<div class="col-sm-4">
+								<input disabled placeholder="Image is not selected" value="{{ document[key] }}" class="data {{key}}" name="{{key}}" >
+							</div>
+							<div class="col-sm-8">
+								<button class="admin-openGallery ml-20 btn btn-primary" data-url="/admin/get-image-gallery" data-save-to="{{ key }}">Select image</button>
+							</div>
+						</div>
 				    {% endif %}
 			    </div>
 			</div>
