--- a/views/home.twig
+++ b/views/home.twig
@@ -19,9 +19,14 @@
 		</div>
 		<div class="col-md-4 sidebar">
 			<h2>Sidebar</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum maiores, omnis et repudiandae fugit rerum excepturi sit quaerat non quibusdam ipsam provident assumenda quo distinctio magni inventore laboriosam! Et, laboriosam.
-			</p>		
+			{% for fact in spitFacts %}
+			    <div class="item col-sm-12 well">
+				    <h3>{{ fact.title }}</h3>
+					<p>{{ fact.text }}</p>
+				</div>
+			{% else %}
+			    No spit facts yet.
+			{% endfor %}
 		</div>
 	</div>
 {% endblock %}
