--- a/views/admin-edit-data.twig
+++ b/views/admin-edit-data.twig
@@ -27,6 +27,13 @@
 								<button class="admin-openGallery ml-20 btn btn-primary" data-url="/admin/get-image-gallery" data-save-to="{{ key }}">Select image</button>
 							</div>
 						</div>
+					{% elseif item == 'option' %}
+						<select class="data" name="{{ key }}">
+							<option value="">-- Choose {{ key }} --</option>
+							{% for option in attribute(_context, key) %}
+								<option {% if option == document[key] %} selected {% endif %} value="{{ option }}">{{ option }}</option>
+							{% endfor %}
+						</select>
 				    {% endif %}
 			    </div>
 			</div>
