Changes to few modules + 404 styles + showdata

--- a/views/404.twig
+++ b/views/404.twig
@@ -1,12 +1,17 @@
-{% extends 'blank-layout.twig' %}
+	<head>
+		<title>404</title>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="/styles/main.css">
+	</head>
+	<body>
 
-{% block content %}
+		<div class="notFound container">
+			<div>
+				<h1 class="extraBig">404</h1>
+				<h1>
+					These aren't pages you're looking for.
+				</h1>
+			</div>
+		</div>
 
-	<h1>
-		This is not page you are looking for
-	</h1>
-	<p>
-		Go to <a href="/">main page</a>.
-	</p>
-
-{% endblock %}
+	</body>
