--- a/src/frontend/styles/styles.less
+++ b/src/frontend/styles/styles.less
@@ -108,3 +108,44 @@
 		}
 	}
 }
+
+@keyframes blured {
+    from {
+		-webkit-filter:brightness(0);
+		-moz-filter:brightness(0);
+		filter:brightness(0);
+	}
+    to {
+		-webkit-filter:brightness(1);
+		-moz-filter:brightness(1);
+		filter:brightness(1);
+	}
+}
+
+.notFound{
+	-webkit-animation-name: blured;
+	-moz-animation-name: blured;
+    -webkit-animation-duration: 4s;
+	-moz-animation-duration: 4s;
+    animation-name: blured;
+    animation-duration: 4s;
+	background-color: black;
+	background: url(/images/Obi-Wan-Kenobi.jpg) no-repeat;
+	background-size: cover;
+	width:100%;
+	height:100%;
+	display: flex;
+	background-color:black;
+	position: absolute;
+	justify-content: center;
+	align-items: center;
+	color:white;
+	a{
+		color: #54D455;
+		transition:.2s;
+		&:hover{
+			text-decoration: none;
+			text-shadow: 0px 0px 7px #54D455, 0px 0px 7px #54D455;
+		}
+	}
+}
